page details &  prompts are written.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                             <img src="content/images/mars-colonization.jpeg" class="card-img-top" alt="AI Image">
                             <div class="card-body">
                                 <h5 class="card-title">Mars is Colonized</h5>
-                                <p class="card-text">Probability: 70%</p>
-                                <p class="card-text">Estimated Year 2034</p>
+                                <p class="card-text">Probability: 40%</p>
+                                <p class="card-text">Estimated Year 2037</p>
                             </div>
                         </div>
                     </div>
@@ -57,9 +57,9 @@
                         <div class="card mb-4">
                             <img src="content/images/dream-child-negotiation.jpeg" class="card-img-top" alt="AI Image">
                             <div class="card-body">
-                                <h5 class="card-title">Mars is Colonized</h5>
-                                <p class="card-text">Probability: 70%</p>
-                                <p class="card-text">Estimated Year 2034</p>
+                                <h5 class="card-title">Dream Child</h5>
+                                <p class="card-text">Probability: 10%</p>
+                                <p class="card-text">Estimated Year 2050</p>
                             </div>
                         </div>
                     </div>
@@ -67,9 +67,9 @@
                       <div class="card mb-4">
                           <img src="content/images/basketball-robots.jpeg" class="card-img-top" alt="AI Image">
                           <div class="card-body">
-                              <h5 class="card-title">Mars is Colonized</h5>
-                              <p class="card-text">Probability: 70%</p>
-                              <p class="card-text">Estimated Year 2034</p>
+                              <h5 class="card-title">Robot Basketball League</h5>
+                              <p class="card-text">Probability: 80%</p>
+                              <p class="card-text">Estimated Year 2040</p>
                           </div>
                       </div>
                   </div>
@@ -84,9 +84,9 @@
                       <div class="card mb-4">
                           <img src="content/images/home-robot.jpeg" class="card-img-top" alt="AI Image">
                           <div class="card-body">
-                              <h5 class="card-title">Mars is Colonized</h5>
-                              <p class="card-text">Probability: 70%</p>
-                              <p class="card-text">Estimated Year 2034</p>
+                              <h5 class="card-title">Home Robot</h5>
+                              <p class="card-text">Probability: 95%</p>
+                              <p class="card-text">Estimated Year 2030</p>
                           </div>
                       </div>
                   </div>
@@ -94,9 +94,9 @@
                       <div class="card mb-4">
                           <img src="content/images/karate-human.jpeg" class="card-img-top" alt="AI Image">
                           <div class="card-body">
-                              <h5 class="card-title">Mars is Colonized</h5>
-                              <p class="card-text">Probability: 70%</p>
-                              <p class="card-text">Estimated Year 2034</p>
+                              <h5 class="card-title">Karate Chip</h5>
+                              <p class="card-text">Probability: 60%</p>
+                              <p class="card-text">Estimated Year 2035</p>
                           </div>
                       </div>
                   </div>  
@@ -104,9 +104,9 @@
                       <div class="card mb-4">
                           <img src="content/images/surgeon-robot.jpeg" class="card-img-top" alt="AI Image">
                           <div class="card-body">
-                              <h5 class="card-title">Mars is Colonized</h5>
-                              <p class="card-text">Probability: 70%</p>
-                              <p class="card-text">Estimated Year 2034</p>
+                              <h5 class="card-title">Surgeon Robots</h5>
+                              <p class="card-text">Probability: 60%</p>
+                              <p class="card-text">Estimated Year 2050</p>
                           </div>
                       </div>
                   </div>
@@ -121,50 +121,73 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              FAQ Question 1
+              How do you predict technological developments that will impact humanity in the future?
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              FAQ Answer 1
+              We use a combination of research, expert analysis, 
+              and trend analysis to identify emerging technologies 
+              and their potential impact on society. 
+              Our team of researchers and futurists continuously monitors advancements in various fields to provide informed predictions.
             </div>
           </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                FAQ Question 1
+                Can I trust the predictions made on your website?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                FAQ Answer 1
+                While we strive to provide accurate and reliable predictions, 
+                it's important to remember that the future is inherently uncertain. 
+                Our predictions are based on the best available information and analysis at the time of publication, 
+                but they are subject to change as new developments occur.
               </div>
             </div>
           </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                FAQ Question 1
+                How can I contribute to your website or share my own predictions?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                FAQ Answer 1
+                We welcome contributions from individuals who are knowledgeable about emerging technologies and their potential impact. 
+                You can reach out to us via email or social media to share your insights or propose a collaboration.
               </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                FAQ Question 1
+                What should I do to prepare for the future based on your predictions?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                FAQ Answer 1
+                Our predictions are intended to help you make informed decisions about the future. 
+                We recommend staying informed about emerging technologies, engaging in discussions with experts, 
+                and considering how you can adapt to potential future scenarios.
               </div>
             </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              How can I stay updated on the latest predictions and developments?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              You can follow us on Instagram and LinkedIn for regular updates, 
+              or subscribe to our newsletter for monthly summaries of our predictions and analysis.
+               We also encourage you to explore our website regularly for new articles and insights.
+            </div>
+          </div>
         </div>
         <!-- Repeat the above accordion-item for other FAQ questions and answers -->
       </div>
